--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@
 .button-class {
     background-color: var(--bright-red);
     color: var(--cloud);
-    border: none;
+    border: 2px solid black;
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
